hover grade color fix for dark mode

--- a/docs/assets/css/resume-template.scss
+++ b/docs/assets/css/resume-template.scss
@@ -119,7 +119,7 @@
     }
 
     .detailsGrade {
-      color: var(--clr-white);
+      color: #ffff;
       background-color: var(--clr-primary);
     }
   }
